--- a/ModelDeployed_AzureAppServices/HackTheTrack-TimeSeriesForecasting_Final.ipynb
+++ b/ModelDeployed_AzureAppServices/HackTheTrack-TimeSeriesForecasting_Final.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
        "4 2020-05-22 01:21:00               72"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "2747144 2020-05-27 00:12:00               53"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
        "2020-05-22 01:21:00               72"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
        "[169 rows x 1 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,122 +827,267 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "#predict count of passengers\n",
-    "pred0 = results.get_prediction(start='2020-05-18 00:00:00', dynamic=False) #monday\n",
+    "pred0 = results.get_prediction(start='2020-05-22 00:25:00', dynamic=False) #monday till friday\n",
     "pred0_ci = pred0.conf_int()\n",
     "table.append(pred0.predicted_mean[2:8 + 24*7])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#predict count of passengers\n",
-    "pred1 = results.get_prediction(start='2020-05-19 00:00:00', dynamic=False) #tuesday\n",
-    "pred1_ci = pred1.conf_int()\n",
-    "# table.append(pred1.predicted_mean)\n",
-    "table.append(pred1.predicted_mean[2:8 + 24*7])"
+    "#getting the correct hourly predictions for 7 days a week by their index placement\n",
+    "predictions = []\n",
+    "for item in table:\n",
+    "    for smallitem in item:\n",
+    "        predictions.append(int(smallitem))\n",
+    "        \n",
+    "predictions = predictions[len(predictions)//3:][5:173]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#predict count of passengers\n",
-    "pred2 = results.get_prediction(start='2020-05-20 00:00:00', dynamic=False) #wednesday\n",
-    "pred2_ci = pred1.conf_int()\n",
-    "# table.append(pred2.predicted_mean)\n",
-    "table.append(pred2.predicted_mean[2:8 + 24*7])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#predict count of passengers\n",
-    "pred3 = results.get_prediction(start='2020-05-21 00:00:00', dynamic=False) #thursday\n",
-    "pred3_ci = pred1.conf_int()\n",
-    "# table.append(pred3.predicted_mean)\n",
-    "table.append(pred3.predicted_mean[2:8 + 24*7])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#predict count of passengers\n",
-    "pred4 = results.get_prediction(start='2020-05-22 00:00:00', dynamic=False) #friday\n",
-    "pred4_ci = pred1.conf_int()\n",
-    "# table.append(pred4.predicted_mean)\n",
-    "table.append(pred4.predicted_mean[2:8 + 24*7])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#predict count of passengers\n",
-    "pred5 = results.get_prediction(start='2020-05-23 00:00:00', dynamic=False) #sat\n",
-    "pred5_ci = pred1.conf_int()\n",
-    "# table.append(pred5.predicted_mean)\n",
-    "table.append(pred5.predicted_mean[2:8 + 24*7])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#predict count of passengers\n",
-    "pred6 = results.get_prediction(start='2020-05-24 00:00:00', dynamic=False) #sun\n",
-    "pred6_ci = pred1.conf_int()\n",
-    "# table.append(pred6.predicted_mean)\n",
-    "table.append(pred6.predicted_mean[2:8 + 24*7])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime\n",
-       "2020-05-22 01:21:00      0.000000\n",
-       "2020-05-22 01:24:00      0.000000\n",
-       "2020-05-22 01:27:00      0.000000\n",
-       "2020-05-22 01:47:00     53.224669\n",
-       "2020-05-22 00:35:00     56.253308\n",
-       "                          ...    \n",
-       "2020-05-26 13:44:00    147.612848\n",
-       "2020-05-26 13:50:00    140.071986\n",
-       "2020-05-26 14:10:00    138.720520\n",
-       "2020-05-26 14:26:00    154.439211\n",
-       "2020-05-26 15:54:00    172.636985\n",
-       "Length: 21439, dtype: float64"
+       "168"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#convert to dictionary for easy interpretting of day and time\n",
+    "#getdatetime()\n",
+    "date_time = ['2020-05-22 00:00:00','2020-05-22 01:00:00','2020-05-22 02:00:00','2020-05-22 03:00:00','2020-05-22 04:00:00','2020-05-22 05:00:00','2020-05-22 06:00:00','2020-05-22 07:00:00','2020-05-22 08:00:00','2020-05-22 09:00:00','2020-05-22 10:00:00','2020-05-22 11:00:00','2020-05-22 12:00:00','2020-05-22 13:00:00','2020-05-22 14:00:00','2020-05-22 15:00:00','2020-05-22 16:00:00','2020-05-22 17:00:00','2020-05-22 18:00:00','2020-05-22 19:00:00','2020-05-22 20:00:00','2020-05-22 21:00:00','2020-05-22 22:00:00','2020-05-22 23:00:00','2020-05-23 00:00:00','2020-05-23 01:00:00','2020-05-23 02:00:00','2020-05-23 03:00:00','2020-05-23 04:00:00','2020-05-23 05:00:00','2020-05-23 06:00:00','2020-05-23 07:00:00','2020-05-23 08:00:00','2020-05-23 09:00:00','2020-05-23 10:00:00','2020-05-23 11:00:00','2020-05-23 12:00:00','2020-05-23 13:00:00','2020-05-23 14:00:00','2020-05-23 15:00:00','2020-05-23 16:00:00','2020-05-23 17:00:00','2020-05-23 18:00:00','2020-05-23 19:00:00','2020-05-23 20:00:00','2020-05-23 21:00:00','2020-05-23 22:00:00','2020-05-23 23:00:00','2020-05-24 00:00:00','2020-05-24 01:00:00','2020-05-24 02:00:00','2020-05-24 03:00:00','2020-05-24 04:00:00','2020-05-24 05:00:00','2020-05-24 06:00:00','2020-05-24 07:00:00','2020-05-24 08:00:00','2020-05-24 09:00:00','2020-05-24 10:00:00','2020-05-24 11:00:00','2020-05-24 12:00:00','2020-05-24 13:00:00','2020-05-24 14:00:00','2020-05-24 15:00:00','2020-05-24 16:00:00','2020-05-24 17:00:00','2020-05-24 18:00:00','2020-05-24 19:00:00','2020-05-24 20:00:00','2020-05-24 21:00:00','2020-05-24 22:00:00','2020-05-24 23:00:00','2020-05-25 00:00:00','2020-05-25 01:00:00','2020-05-25 02:00:00','2020-05-25 03:00:00','2020-05-25 04:00:00','2020-05-25 05:00:00','2020-05-25 06:00:00','2020-05-25 07:00:00','2020-05-25 08:00:00','2020-05-25 09:00:00','2020-05-25 10:00:00','2020-05-25 11:00:00','2020-05-25 12:00:00','2020-05-25 13:00:00','2020-05-25 14:00:00','2020-05-25 15:00:00','2020-05-25 16:00:00','2020-05-25 17:00:00','2020-05-25 18:00:00','2020-05-25 19:00:00','2020-05-25 20:00:00','2020-05-25 21:00:00','2020-05-25 22:00:00','2020-05-25 23:00:00','2020-05-26 00:00:00','2020-05-26 01:00:00','2020-05-26 02:00:00','2020-05-26 03:00:00','2020-05-26 04:00:00','2020-05-26 05:00:00','2020-05-26 06:00:00','2020-05-26 07:00:00','2020-05-26 08:00:00','2020-05-26 09:00:00','2020-05-26 10:00:00','2020-05-26 11:00:00','2020-05-26 12:00:00','2020-05-26 13:00:00','2020-05-26 14:00:00','2020-05-26 15:00:00','2020-05-26 16:00:00','2020-05-26 17:00:00','2020-05-26 18:00:00','2020-05-26 19:00:00','2020-05-26 20:00:00','2020-05-26 21:00:00','2020-05-26 22:00:00','2020-05-26 23:00:00','2020-05-27 00:00:00','2020-05-27 01:00:00','2020-05-27 02:00:00','2020-05-27 03:00:00','2020-05-27 04:00:00','2020-05-27 05:00:00','2020-05-27 06:00:00','2020-05-27 07:00:00','2020-05-27 08:00:00','2020-05-27 09:00:00','2020-05-27 10:00:00','2020-05-27 11:00:00','2020-05-27 12:00:00','2020-05-27 13:00:00','2020-05-27 14:00:00','2020-05-27 15:00:00','2020-05-27 16:00:00','2020-05-27 17:00:00','2020-05-27 18:00:00','2020-05-27 19:00:00','2020-05-27 20:00:00','2020-05-27 21:00:00','2020-05-27 22:00:00','2020-05-27 23:00:00','2020-05-28 00:00:00','2020-05-28 01:00:00','2020-05-28 02:00:00','2020-05-28 03:00:00','2020-05-28 04:00:00','2020-05-28 05:00:00','2020-05-28 06:00:00','2020-05-28 07:00:00','2020-05-28 08:00:00','2020-05-28 09:00:00','2020-05-28 10:00:00','2020-05-28 11:00:00','2020-05-28 12:00:00','2020-05-28 13:00:00','2020-05-28 14:00:00','2020-05-28 15:00:00','2020-05-28 16:00:00','2020-05-28 17:00:00','2020-05-28 18:00:00','2020-05-28 19:00:00','2020-05-28 20:00:00','2020-05-28 21:00:00','2020-05-28 22:00:00','2020-05-28 23:00:00']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'2020-05-22 00:00:00': 142,\n",
+       " '2020-05-22 01:00:00': 160,\n",
+       " '2020-05-22 02:00:00': 141,\n",
+       " '2020-05-22 03:00:00': 161,\n",
+       " '2020-05-22 04:00:00': 150,\n",
+       " '2020-05-22 05:00:00': 157,\n",
+       " '2020-05-22 06:00:00': 148,\n",
+       " '2020-05-22 07:00:00': 144,\n",
+       " '2020-05-22 08:00:00': 155,\n",
+       " '2020-05-22 09:00:00': 136,\n",
+       " '2020-05-22 10:00:00': 160,\n",
+       " '2020-05-22 11:00:00': 147,\n",
+       " '2020-05-22 12:00:00': 150,\n",
+       " '2020-05-22 13:00:00': 141,\n",
+       " '2020-05-22 14:00:00': 142,\n",
+       " '2020-05-22 15:00:00': 163,\n",
+       " '2020-05-22 16:00:00': 148,\n",
+       " '2020-05-22 17:00:00': 157,\n",
+       " '2020-05-22 18:00:00': 143,\n",
+       " '2020-05-22 19:00:00': 160,\n",
+       " '2020-05-22 20:00:00': 155,\n",
+       " '2020-05-22 21:00:00': 146,\n",
+       " '2020-05-22 22:00:00': 147,\n",
+       " '2020-05-22 23:00:00': 158,\n",
+       " '2020-05-23 00:00:00': 164,\n",
+       " '2020-05-23 01:00:00': 144,\n",
+       " '2020-05-23 02:00:00': 152,\n",
+       " '2020-05-23 03:00:00': 244,\n",
+       " '2020-05-23 04:00:00': 152,\n",
+       " '2020-05-23 05:00:00': 157,\n",
+       " '2020-05-23 06:00:00': 159,\n",
+       " '2020-05-23 07:00:00': 149,\n",
+       " '2020-05-23 08:00:00': 139,\n",
+       " '2020-05-23 09:00:00': 142,\n",
+       " '2020-05-23 10:00:00': 211,\n",
+       " '2020-05-23 11:00:00': 154,\n",
+       " '2020-05-23 12:00:00': 151,\n",
+       " '2020-05-23 13:00:00': 167,\n",
+       " '2020-05-23 14:00:00': 155,\n",
+       " '2020-05-23 15:00:00': 143,\n",
+       " '2020-05-23 16:00:00': 139,\n",
+       " '2020-05-23 17:00:00': 191,\n",
+       " '2020-05-23 18:00:00': 158,\n",
+       " '2020-05-23 19:00:00': 159,\n",
+       " '2020-05-23 20:00:00': 156,\n",
+       " '2020-05-23 21:00:00': 164,\n",
+       " '2020-05-23 22:00:00': 151,\n",
+       " '2020-05-23 23:00:00': 137,\n",
+       " '2020-05-24 00:00:00': 184,\n",
+       " '2020-05-24 01:00:00': 159,\n",
+       " '2020-05-24 02:00:00': 145,\n",
+       " '2020-05-24 03:00:00': 156,\n",
+       " '2020-05-24 04:00:00': 168,\n",
+       " '2020-05-24 05:00:00': 0,\n",
+       " '2020-05-24 06:00:00': 0,\n",
+       " '2020-05-24 07:00:00': 0,\n",
+       " '2020-05-24 08:00:00': 0,\n",
+       " '2020-05-24 09:00:00': 0,\n",
+       " '2020-05-24 10:00:00': 53,\n",
+       " '2020-05-24 11:00:00': 56,\n",
+       " '2020-05-24 12:00:00': 60,\n",
+       " '2020-05-24 13:00:00': 67,\n",
+       " '2020-05-24 14:00:00': 73,\n",
+       " '2020-05-24 15:00:00': 62,\n",
+       " '2020-05-24 16:00:00': 65,\n",
+       " '2020-05-24 17:00:00': 56,\n",
+       " '2020-05-24 18:00:00': 53,\n",
+       " '2020-05-24 19:00:00': 54,\n",
+       " '2020-05-24 20:00:00': 57,\n",
+       " '2020-05-24 21:00:00': 58,\n",
+       " '2020-05-24 22:00:00': 52,\n",
+       " '2020-05-24 23:00:00': 60,\n",
+       " '2020-05-25 00:00:00': 59,\n",
+       " '2020-05-25 01:00:00': 61,\n",
+       " '2020-05-25 02:00:00': 56,\n",
+       " '2020-05-25 03:00:00': 112,\n",
+       " '2020-05-25 04:00:00': 99,\n",
+       " '2020-05-25 05:00:00': 106,\n",
+       " '2020-05-25 06:00:00': 100,\n",
+       " '2020-05-25 07:00:00': 93,\n",
+       " '2020-05-25 08:00:00': 99,\n",
+       " '2020-05-25 09:00:00': 115,\n",
+       " '2020-05-25 10:00:00': 85,\n",
+       " '2020-05-25 11:00:00': 76,\n",
+       " '2020-05-25 12:00:00': 78,\n",
+       " '2020-05-25 13:00:00': 85,\n",
+       " '2020-05-25 14:00:00': 79,\n",
+       " '2020-05-25 15:00:00': 85,\n",
+       " '2020-05-25 16:00:00': 92,\n",
+       " '2020-05-25 17:00:00': 108,\n",
+       " '2020-05-25 18:00:00': 69,\n",
+       " '2020-05-25 19:00:00': 74,\n",
+       " '2020-05-25 20:00:00': 71,\n",
+       " '2020-05-25 21:00:00': 71,\n",
+       " '2020-05-25 22:00:00': 76,\n",
+       " '2020-05-25 23:00:00': 81,\n",
+       " '2020-05-26 00:00:00': 84,\n",
+       " '2020-05-26 01:00:00': 62,\n",
+       " '2020-05-26 02:00:00': 72,\n",
+       " '2020-05-26 03:00:00': 65,\n",
+       " '2020-05-26 04:00:00': 71,\n",
+       " '2020-05-26 05:00:00': 71,\n",
+       " '2020-05-26 06:00:00': 72,\n",
+       " '2020-05-26 07:00:00': 77,\n",
+       " '2020-05-26 08:00:00': 65,\n",
+       " '2020-05-26 09:00:00': 72,\n",
+       " '2020-05-26 10:00:00': 93,\n",
+       " '2020-05-26 11:00:00': 107,\n",
+       " '2020-05-26 12:00:00': 100,\n",
+       " '2020-05-26 13:00:00': 108,\n",
+       " '2020-05-26 14:00:00': 108,\n",
+       " '2020-05-26 15:00:00': 100,\n",
+       " '2020-05-26 16:00:00': 115,\n",
+       " '2020-05-26 17:00:00': 112,\n",
+       " '2020-05-26 18:00:00': 115,\n",
+       " '2020-05-26 19:00:00': 124,\n",
+       " '2020-05-26 20:00:00': 135,\n",
+       " '2020-05-26 21:00:00': 127,\n",
+       " '2020-05-26 22:00:00': 118,\n",
+       " '2020-05-26 23:00:00': 122,\n",
+       " '2020-05-27 00:00:00': 128,\n",
+       " '2020-05-27 01:00:00': 123,\n",
+       " '2020-05-27 02:00:00': 95,\n",
+       " '2020-05-27 03:00:00': 98,\n",
+       " '2020-05-27 04:00:00': 100,\n",
+       " '2020-05-27 05:00:00': 97,\n",
+       " '2020-05-27 06:00:00': 97,\n",
+       " '2020-05-27 07:00:00': 95,\n",
+       " '2020-05-27 08:00:00': 97,\n",
+       " '2020-05-27 09:00:00': 78,\n",
+       " '2020-05-27 10:00:00': 83,\n",
+       " '2020-05-27 11:00:00': 81,\n",
+       " '2020-05-27 12:00:00': 84,\n",
+       " '2020-05-27 13:00:00': 80,\n",
+       " '2020-05-27 14:00:00': 86,\n",
+       " '2020-05-27 15:00:00': 78,\n",
+       " '2020-05-27 16:00:00': 71,\n",
+       " '2020-05-27 17:00:00': 107,\n",
+       " '2020-05-27 18:00:00': 113,\n",
+       " '2020-05-27 19:00:00': 125,\n",
+       " '2020-05-27 20:00:00': 119,\n",
+       " '2020-05-27 21:00:00': 125,\n",
+       " '2020-05-27 22:00:00': 109,\n",
+       " '2020-05-27 23:00:00': 109,\n",
+       " '2020-05-28 00:00:00': 121,\n",
+       " '2020-05-28 01:00:00': 137,\n",
+       " '2020-05-28 02:00:00': 145,\n",
+       " '2020-05-28 03:00:00': 123,\n",
+       " '2020-05-28 04:00:00': 134,\n",
+       " '2020-05-28 05:00:00': 128,\n",
+       " '2020-05-28 06:00:00': 133,\n",
+       " '2020-05-28 07:00:00': 126,\n",
+       " '2020-05-28 08:00:00': 152,\n",
+       " '2020-05-28 09:00:00': 140,\n",
+       " '2020-05-28 10:00:00': 146,\n",
+       " '2020-05-28 11:00:00': 134,\n",
+       " '2020-05-28 12:00:00': 139,\n",
+       " '2020-05-28 13:00:00': 139,\n",
+       " '2020-05-28 14:00:00': 138,\n",
+       " '2020-05-28 15:00:00': 158,\n",
+       " '2020-05-28 16:00:00': 140,\n",
+       " '2020-05-28 17:00:00': 155,\n",
+       " '2020-05-28 18:00:00': 138,\n",
+       " '2020-05-28 19:00:00': 147,\n",
+       " '2020-05-28 20:00:00': 137,\n",
+       " '2020-05-28 21:00:00': 144,\n",
+       " '2020-05-28 22:00:00': 148,\n",
+       " '2020-05-28 23:00:00': 154}"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prediction_values = dict(zip(date_time, predictions))\n",
+    "prediction_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open('data.json', 'w') as fp:\n",
+    "    json.dump(prediction_values, fp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "pred0.predicted_mean"
    ]
